Added podspec and rearranged source files in preparation for setting up as a pod.

--- a/AuthKit/Podfile
+++ b/AuthKit/Podfile
@@ -3,3 +3,5 @@ platform :ios, '6.1'
 target :AuthKitTests, :exclusive => true do
   pod 'OCMock', '>= 2.0.1'
 end
+
+podspec :podspec => "../AuthKit.podspec"
